# surprises

./: .gitignore  README.md  index.md
apitest/: PLAN.md  README.md  go.mod
asteroid-runner/: PLAN.md  README.md  pyproject.toml
asteroid-runner/src/: app.py  main.py
asteroid-runner/src/game/: __init__.py  config.py  engine.py  state.py
asteroid-runner/src/game/entities/: __init__.py  base.py
asteroid-runner/src/game/systems/: __init__.py  collision.py  difficulty.py  movement.py  spawner.py
asteroid-runner/src/game/world/: __init__.py  generator.py  grid.py
asteroid-runner/src/input/: __init__.py  handler.py
asteroid-runner/src/persistence/: __init__.py  high_scores.py
asteroid-runner/src/ui/: __init__.py  game_over_screen.py  game_screen.py  high_scores_screen.py  hud.py  menu_screen.py  pause_screen.py
asteroid-runner/src/ui/widgets/: __init__.py  animated_text.py  ascii_art.py  health_bar.py
asteroid-runner/src/utils/: __init__.py  debug.py  random_utils.py  timing.py  vector2.py
asteroid-runner/tests/: conftest.py  test_collision.py  test_entities.py  test_persistence.py  test_systems.py
bookmark-vault/: PLAN.md  README.md  app.py
browser-pdf-extractor/: index.html
certcheck/: PLAN.md  README.md  certcheck.py
clipstash/: README.md  app.py  requirements.txt
clipstash/templates/: index.html
crono/: README.md  SPEC.md  pyproject.toml  requirements.txt
crono/crono/: __init__.py  __main__.py  app.py  cron_parser.py  history.py  job_manager.py  models.py  screens.py  storage.py  widgets.py
dockerwatch/: .gitignore  Makefile  PLAN.md  README.md  config.yaml  go.mod
encrypted-pastebin/: README.md  app.py  requirements.txt
encrypted-pastebin/templates/: created.html  error.html  index.html  password_prompt.html  view.html
expiring-link-shortener/: README.md  app.py
gitviz/: CHANGELOG.md  LICENSE  PLAN.md  README.md  pyproject.toml
gitviz/scripts/: generate_test_repos.py
gitviz/src/gitviz/: __init__.py  __main__.py  cli.py
gitviz/src/gitviz/graph/: __init__.py  ascii_renderer.py  color.py  layout.py  node.py
gitviz/src/gitviz/models/: __init__.py  actor.py  branch.py  commit.py  errors.py  ref.py  repository.py
gitviz/src/gitviz/parser/: __init__.py  base.py  commit.py  loose.py  pack.py  ref_parser.py  repository_loader.py  tree.py
gitviz/src/gitviz/search/: __init__.py  filter_engine.py  matcher.py
gitviz/src/gitviz/ui/: __init__.py  app.py
gitviz/src/gitviz/ui/screens/: __init__.py  diff_screen.py  main_screen.py
gitviz/src/gitviz/ui/styles/: __init__.py  theme.py
gitviz/src/gitviz/ui/widgets/: commit_row.py  detail_panel.py  graph_widget.py  search_bar.py  status_bar.py
gitviz/src/gitviz/utils/: datetime_utils.py  diff_utils.py
gitviz/tests/: conftest.py
gitviz/tests/unit/: test_commit.py  test_filter.py  test_graph_renderer.py  test_layout.py  test_loose_parser.py  test_pack_parser.py
healthdash/: .gitignore  PLAN.md  README.md  gunicorn_config.py  requirements-dev.txt  requirements.txt  run.py
healthdash/healthdash/: __init__.py  config.py  models.py
healthdash/tests/: test_api.py  test_models.py  test_services.py
kanboardx/: PLAN.md  README.md  kanboardx.py
lnfs/: README.md  requirements.txt  server.py
logprobe/: Cargo.toml  PLAN.md  README.md
logprobe/src/: app.rs  config.rs  errors.rs  lib.rs
logprobe/src/bookmarks/: mod.rs  storage.rs
logprobe/src/log/: file.rs  level.rs  mod.rs  parser.rs  timestamp.rs  watcher.rs
logprobe/src/search/: engine.rs  index.rs  mod.rs  regex.rs
logprobe/src/ui/: layout.rs  mod.rs  state.rs  styles.rs  views.rs
logprobe/tests/: integration.rs
logvault/: .env.example  Dockerfile  PLAN.md  README.md  docker-compose.yml  go.mod
logvault/web/: index.html
markdown-link-checker/: PLAN.md  README.md  index.html  package.json
mockserver/: PLAN.md  README.md  mockapi.py
netscout/: PLAN.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
netscout/netscout/: __main__.py  cli.py
netscout/netscout/discovery/: device.py  oui_lookup.py  ports.py
netscout/netscout/output/: csv_exporter.py  formatter.py  json_exporter.py  progress.py
netscout/netscout/scanner/: arp_scanner.py  hostname_resolver.py  port_scanner.py  scheduler.py
netscout/netscout/utils/: errors.py  logging.py  network.py
packetsniffer/: PLAN.md  README.md  pyproject.toml
packetsniffer/packetsniffer/: __init__.py  capture.py  cli.py  dashboard.py  export.py  filters.py  parser.py  stats.py
packetsniffer/tests/: test_capture.py  test_export.py  test_filters.py  test_parser.py
passgen/: Cargo.toml  PLAN.md
passgen/benches/: benchmark.rs
passgen/src/: cli.rs  clipboard.rs  config.rs  entropy.rs  errors.rs  generator.rs  lib.rs  main.rs  output.rs  storage.rs
pingplot/: README.md  pingplot.py
qrforge/: PLAN.md  README.md  app.py  requirements.txt
recipe-manager/: PLAN.md  README.md  app.py  requirements.txt  run.py
secret-vault/: .gitignore  Makefile  PLAN.md  README.md  go.mod  main.go
shellmem/: Cargo.toml  PLAN.md  README.md
shellmem/shellmem-cli/: Cargo.toml
shellmem/shellmem-cli/src/: main.rs
shellmem/shellmem-core/: Cargo.toml
shellmem/shellmem-core/src/: config.rs  error.rs  lib.rs  models.rs
shellmem/shellmem-core/src/parser/: bash.rs  fish.rs  mod.rs  zsh.rs
shellmem/shellmem-core/src/search/: mod.rs
shellmem/shellmem-core/src/storage/: migrations.rs  mod.rs  sqlite.rs
shellmem/shellmem-core/src/sync/: mod.rs
shellmem/shellmem-tui/: Cargo.toml
shellmem/shellmem-tui/src/: app.rs  input.rs  main.rs  ui.rs
shellmem/shellmem-tui/src/widgets/: mod.rs
slidemd/: PLAN.md  README.md  package.json
termtimer/: PLAN.md  README.md  pyproject.toml
textdiff/: README.md  test_textdiff.py  textdiff.py
tickertape/: PLAN.md  README.md  requirements.txt  tickertape.py
uptime-monitor/: README.md  main.py  requirements.txt  run.sh
url-shortener/: README.md  SPEC.md  app.py  main.py  requirements.txt  run.sh  shortener.py
weather-dashboard/: PLAN.md  README.md  requirements.txt
webhook-inspector/: SPEC.md  package.json  server.js
(+170 files in other folders)
