[project]
name = "gitviz"
version = "1.0.0"
description = "Interactive terminal UI Git history visualizer"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "GitViz Team"}
]
requires-python = ">=3.11"
dependencies = [
    "textual>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "pre-commit>=3.0",
]

[project.scripts]
gitviz = "gitviz.cli:main"

[project.urls]
Homepage = "https://github.com/gitviz/gitviz"
Repository = "https://github.com/gitviz/gitviz"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.hatch.build.targets.wheel]
packages = ["src/gitviz"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
