[package]
name = "logprobe"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
notify = "7"
regex = "1"
tokio = { version = "1", features = ["sync", "time", "rt"] }
tracing = "0.1"
ratatui = "0.30"
crossterm = "0.28"
bitvec = "1"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "logprobe"
path = "src/bin/main.rs"