[project]
name = "netscout"
version = "1.0.0"
description = "Network Scanner & Device Discovery Tool"
requires-python = ">=3.10"
dependencies = [
    "scapy>=2.5.0",
    "zeroconf>=0.40.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
netscout = "netscout.cli:main"

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.black]
line-length = 88

[tool.mypy]
python_version = "3.10"