[project]
name = "packetsniffer"
version = "0.1.0"
description = "Python CLI network packet analyzer using Scapy"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "scapy>=2.5.0",
    "rich>=13.0.0",
    "click>=8.1.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
packetsniffer = "packetsniffer.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]