[package]
name = "shellmem-core"
version.workspace = true
edition.workspace = true

[dependencies]
rusqlite.workspace = true
fuzzy-matcher.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
notify.workspace = true
sha2.workspace = true
hex.workspace = true
dirs.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile = "3.8"
